--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,44 @@
         border-top: 1px solid #EEEEEE;
     }
 }
+/*/* Style the sub-dropdown button */
+.sub-dropbtn {
+    /* background-color: #4CAF50; */
+    color: rgb(11, 5, 5);
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Sub-dropdown button on hover & focus */
+/* .sub-dropbtn:hover,
+.sub-dropbtn:focus {
+    background-color: #3e8e41;
+} */
+
+/* Position the sub-dropdown content */
+.sub-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 180px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    margin-top: -2px;
+    margin-left: 200px;
+    /* Should be equal to min-width of parent */
+}
+.sub-dropdown-content a {
+    margin-left: 20px;
+    padding: 10px;
+}
+
+/* Show the sub-dropdown menu on hover */
+.sub-dropdown:hover .sub-dropdown-content {
+    display: block;
+}
+/* subdropdown end */
 
 @media (min-width: 992px) {
     .navbar .nav-item .dropdown-menu {
@@ -141,7 +179,16 @@
         opacity: 1;
     }
 }
-
+@media (max-width: 768px) {
+    .dropdown-menu {
+        position: static;
+        float: none;
+    }
+    .sub-dropdown-content {
+        position: static;
+        float: none;
+    }
+}
 
 /*** Header ***/
 .owl-carousel-inner {
